# autoware_universe

./: .gitignore
launch/tier4_planning_launch/launch/scenario_planning/lane_driving/behavior_planning/: behavior_planning.launch.xml
planning/behavior_velocity_planner/autoware_behavior_velocity_planner/: CMakeLists.txt
planning/motion_velocity_planner/autoware_motion_velocity_planner_node/: CMakeLists.txt
planning/my_custom_planner/: package.xml  setup.cfg  setup.py
planning/my_custom_planner/my_custom_planner/: my_logger.py  planner_node.py
