<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_custom_planner</name>
  <version>0.0.1</version>
  <description>A custom planner for Autoware</description>
  <maintainer email="abolfazl.kabiri@aut.ac.ir">abolfazl</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <!-- <depend>autoware_internal_planning_msgs</depend> -->
  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_map_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>lanelet2</depend>
  <depend>lanelet2_extension</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
